# UOF-Proto

./: .gitignore  Build.sh  CMakeLists.txt  license.txt
client/: CMakeLists.txt  main.c  main.h
client/system/: CMakeLists.txt  main-apple.c  main-linux.c  main-windows.c
extended-tests/: CMakeLists.txt  hash_table-test.h  main.c  serializer-test.h  vector-test.h
unit-tests/: CMakeLists.txt  allocator-test.h  circuit-test.h  compiler-test.h  deserializer-test.h  hash_table-test.h  main.c  main.h  serializer-test.h  sockets-test.h  speed-test.h  stream-test.h  symmetric-test.h  task-test.h  test.c  test.h  threads-test.h
